--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         </executions>
         <configuration>
           <descriptorRefs>
-            <descriptorRef>with-dependencies</descriptorRef>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
         </configuration>
       </plugin>
