--- a/playbook.yml
+++ b/playbook.yml
@@ -2,7 +2,7 @@
   hosts: localhost
   connection: local
   vars:
-    ansible_python_interpreter: /usr/bin/python3
+    ansible_python_interpreter: /home/lenovo/anaconda3/bin/python
   tasks:
     - name: Pull image
       docker_image:
